# fastapi_tutor

./: .gitignore  LOGO  README.md  main.py  pyproject.toml
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
migrations/versions/: ce0cac8c2b2d_create_posts_table.py
