[tool.poetry]
name = "fastapi-tutor"
version = "0.1.0"
description = "Tutorial de fastapi com pecistencoiia de dados deploy"
authors = ["Junior <eecfredes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
